einstellung_derive/src/trybuild_tests/custom_merge_type_mismatch.stderr
error: Unknown value: `function(merge_hosts)`. Did you mean `function`?
 --> src/trybuild_tests/custom_merge_type_mismatch.rs
  |
  |     #[config(merge = "function(merge_hosts)")]
  |                      ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `a`
 --> src/trybuild_tests/custom_merge_type_mismatch.rs
  |
  | pub fn merge_hosts(a: Option<u16>, b: Option<u16>) -> Option<u16> {
  |                    ^ help: if this is intentional, prefix it with an underscore: `_a`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
